<resources>

    <string name="app_name">Camera</string>
    <string name="app_name_main">Simple Demo</string>
    <string name="app_name_stream">Stream Demo</string>
    <string name="app_name_resizing">Resizing Demo</string>
    <string name="app_name_qr_code">QR Code Demo</string>

    <string name="header_title">@string/app_name</string>
    <string name="header_description">Examples</string>

    <string name="btn_request_permissions">Request Permissions</string>

    <string name="btn_capture">Capture</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_resize">Resize</string>

</resources>
