<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph"
    app:startDestination="@+id/main_fragment">

    <fragment
        android:id="@+id/main_fragment"
        android:name="com.xlythe.sample.camera.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/stream_fragment"
        android:name="com.xlythe.sample.camera.StreamFragment"
        android:label="@string/app_name_stream"
        tools:layout="@layout/fragment_stream" />

    <fragment
        android:id="@+id/resizing_fragment"
        android:name="com.xlythe.sample.camera.ResizingFragment"
        android:label="@string/app_name_resizing"
        tools:layout="@layout/fragment_resizing" />

    <fragment
        android:id="@+id/qr_code_fragment"
        android:name="com.xlythe.sample.camera.QrCodeFragment"
        android:label="@string/app_name_qr_code"
        tools:layout="@layout/fragment_qr_code" />

</navigation>